Fix navbar spacing

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -30,7 +30,7 @@
 .main-header {
   justify-content: space-between;
   align-items: center;
-  padding: 0 50px;
+  padding: 0 30px 0 50px;
   width: 100%;
 }
 
@@ -44,7 +44,7 @@
 .nav-items {
   justify-content: space-between;
   align-items: center;
-  width: 80%;
+  width: 85%;
 }
 
 .nav-items * {
